third_party/move/move-model/tests/sources/expressions_err.exp
error: undeclared `M::x`
   ┌─ tests/sources/expressions_err.move:12:7
   │
12 │       x
   │       ^

error: no function named `not_declared` found
   ┌─ tests/sources/expressions_err.move:17:7
   │
17 │       not_declared()
   │       ^^^^^^^^^^^^^^

error: expected `num` but found `bool`
   ┌─ tests/sources/expressions_err.move:22:7
   │
22 │       false
   │       ^^^^^

error: invalid call of `>`: expected `num` but found `vector<num>` for argument 1
   ┌─ tests/sources/expressions_err.move:27:7
   │
27 │       x > y
   │       ^^^^^

error: expected `(num, bool)` but found `bool`
   ┌─ tests/sources/expressions_err.move:32:7
   │
32 │       false
   │       ^^^^^

error: invalid call of `M::wrongly_typed_callee`: expected `bool` but found `u256` for argument 2
   ┌─ tests/sources/expressions_err.move:37:39
   │
37 │     fun wrongly_typed_caller(): num { wrongly_typed_callee(1, 1) }
   │                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected `num` but found `bool`
   ┌─ tests/sources/expressions_err.move:41:80
   │
41 │     fun wrongly_typed_fun_arg_caller(): num { wrongly_typed_fun_arg_callee(|x| false) }
   │                                                                                ^^^^^

error: invalid call of `M::wrong_instantiation`: generic count mismatch (expected 2 but found 1)
   ┌─ tests/sources/expressions_err.move:46:7
   │
46 │       wrong_instantiation<u64>(x)
   │       ^^^^^^^^^^^^^^^^^^^^^^^^^^^
